fix: #Overflow: hidden with border radius not working on Safari# by adding `isolation: isolate;`, view detail at developer.mozilla.org/en-US/docs/Web/CSS/isolation

--- a/src/pages/post/index.module.scss
+++ b/src/pages/post/index.module.scss
@@ -113,6 +113,7 @@ $popover-container-width: min(90vw, 700px);
       height: 100%;
       overflow: hidden;
       border-radius: 20px;
+      isolation: isolate;
 
       .image {
         position: absolute;
