--- a/src/pages/timeline/index.module.scss
+++ b/src/pages/timeline/index.module.scss
@@ -20,7 +20,7 @@
     @apply grid gap-2 grid-cols-3 py-2;
 
     .img {
-      @apply aspect-square object-cover rounded w-full h-full object-cover;
+      @apply aspect-square w-full object-cover;
     }
   }
 
